--- a/index.html
+++ b/index.html
@@ -24,7 +24,28 @@
       <p1>Web Developer in Training</p1>
     </section>
     <section id="projects">
-
+        <div class="projects-div">
+        <figure>
+            <img src="images/porto.JPG">
+            <figcaption>My Restoration Project</figcaption>
+        </figure>
+        <figure>
+            <img src="images/porto.JPG">
+            <figcaption>My Restoration Project</figcaption>
+        </figure>
+        <figure>
+            <img src="images/porto.JPG">
+            <figcaption>My Restoration Project</figcaption>
+        </figure>
+        <figure>
+            <img src="images/porto.JPG">
+            <figcaption>My Restoration Project</figcaption>
+        </figure>
+        <figure>
+            <img src="images/porto.JPG">
+            <figcaption>My Restoration Project</figcaption>
+        </figure>
+        </div>
     </section>
     <section id="contact">
 
