--- a/index.html
+++ b/index.html
@@ -13,46 +13,58 @@
   </head>
   <body>
     <nav id="navbar">
-        <ul class="navlist">
-            <li>About</li>
-            <li>Projects</li>
-            <li>Contact</li>
-        </ul>
+      <ul class="navlist">
+        <a href="#welcome-section">
+          <li>About</li>
+        </a>
+        <a href="#projects">
+          <li>Projects</li>
+        </a>
+        <a href="#contact">
+          <li>Contact</li>
+        </a>
+      </ul>
     </nav>
     <section id="welcome-section">
       <h1>Hello! I am Katie!</h1>
       <p1>Web Developer in Training</p1>
     </section>
     <section id="projects">
-        <div class="projects-div">
-        <figure>
-            <img src="images/porto.JPG">
+      <div class="projects-grid">
+        <a href="#" target="_blank" class="project-tile">
+          <figure>
+            <img src="images/portoresize.JPG" />
             <figcaption>My Restoration Project</figcaption>
-        </figure>
-        <figure>
-            <img src="images/porto.JPG">
+          </figure>
+        </a>
+        <a href="#" target="_blank" class="project-tile">
+          <figure>
+            <img src="images/portoresize.JPG" />
             <figcaption>My Restoration Project</figcaption>
-        </figure>
-        <figure>
-            <img src="images/porto.JPG">
+          </figure>
+        </a>
+        <a href="#" target="_blank" class="project-tile">
+          <figure>
+            <img src="images/portoresize.JPG" />
             <figcaption>My Restoration Project</figcaption>
-        </figure>
-        <figure>
-            <img src="images/porto.JPG">
+          </figure>
+        </a>
+        <a href="#" target="_blank" class="project-tile">
+          <figure>
+            <img src="images/portoresize.JPG" />
             <figcaption>My Restoration Project</figcaption>
-        </figure>
-        <figure>
-            <img src="images/porto.JPG">
+          </figure>
+        </a>
+        <a href="#" target="_blank" class="project-tile">
+          <figure>
+            <img src="images/portoresize.JPG" />
             <figcaption>My Restoration Project</figcaption>
-        </figure>
-        </div>
+          </figure>
+        </a>
+      </div>
     </section>
-    <section id="contact">
-
-    </section>
-    <footer>
-
-    </footer>
+    <section id="contact"></section>
+    <footer></footer>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
