--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
       rel="stylesheet"
     />
+    <link href="style.css" rel="stylesheet" />
+
     <title>Personal Portfolio</title>
   </head>
   <body>
@@ -63,8 +70,20 @@
         </a>
       </div>
     </section>
-    <section id="contact"></section>
-    <footer></footer>
+    <section id="contact">
+      <div>
+        <h2>h2 filler</h2>
+        <p>paragraph</p>
+      </div>
+      <div class="contact-details">
+        <a id="profile-link" href="https://github.com/10735678" target="_blank">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+      </div>
+    </section>
+    <footer>
+        <h4>This Portfolio is for Educational Purposes Only</h4>
+    </footer>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
