--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
         </a>
       </div>
     </section>
-    <footer>
+    <div id="footerbreak">
+
+    </div>
+    <footer id="footer">
         <h4>This Portfolio is for Educational Purposes Only</h4>
     </footer>
 
