--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
       </ul>
     </nav>
     <section id="welcome-section">
+        <img src="images/me.jpg" />
       <h1>Hello! I am Katie!</h1>
       <p1>Web Developer in Training</p1>
     </section>
+    <div id="projectbreak"></div>
     <section id="projects">
       <div class="projects-grid">
         <a href="#" target="_blank" class="project-tile">
