--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
     </nav>
     <section id="welcome-section">
-        <img src="images/me.jpg" />
+      <img src="images/me.jpg" />
       <h1>Hello! I am Katie!</h1>
       <p1>Web Developer in Training</p1>
     </section>
@@ -43,51 +43,58 @@
         <a href="#" target="_blank" class="project-tile">
           <figure>
             <img src="images/portoresize.JPG" />
-            <figcaption>My Restoration Project</figcaption>
+            <figcaption>Porto</figcaption>
           </figure>
         </a>
         <a href="#" target="_blank" class="project-tile">
           <figure>
-            <img src="images/portoresize.JPG" />
-            <figcaption>My Restoration Project</figcaption>
+            <img src="images/castle.JPG" />
+            <figcaption>Castles</figcaption>
           </figure>
         </a>
         <a href="#" target="_blank" class="project-tile">
           <figure>
-            <img src="images/portoresize.JPG" />
-            <figcaption>My Restoration Project</figcaption>
+            <img src="images/houses.jpg" />
+            <figcaption>Tiles</figcaption>
           </figure>
         </a>
         <a href="#" target="_blank" class="project-tile">
           <figure>
-            <img src="images/portoresize.JPG" />
-            <figcaption>My Restoration Project</figcaption>
+            <img src="images/stream.jpg" />
+            <figcaption>Garden</figcaption>
           </figure>
         </a>
         <a href="#" target="_blank" class="project-tile">
           <figure>
-            <img src="images/portoresize.JPG" />
-            <figcaption>My Restoration Project</figcaption>
+            <img src="images/umbrella.jpg" />
+            <figcaption>Personalized</figcaption>
           </figure>
         </a>
       </div>
     </section>
     <section id="contact">
       <div>
-        <h2>h2 filler</h2>
-        <p>paragraph</p>
+        <h2>Learn more about what I do!</h2>
+        <p class="contact-me">Contact me...</p>
       </div>
       <div class="contact-details">
         <a id="profile-link" href="https://github.com/10735678" target="_blank">
           <i class="fab fa-github"></i> GitHub
         </a>
+        <a
+          href="https://www.facebook.com/profile.php?id=100015782447478"
+          target="_blank"
+        >
+          <i class="fab fa-facebook-square"></i> Facebook
+        </a>
+        <a href="https://www.instagram.com/5jones.kathryn/" target="_blank">
+          <i class="fab fa-instagram"></i> Instagram
+        </a>
       </div>
     </section>
-    <div id="footerbreak">
-
-    </div>
+    <div id="footerbreak"></div>
     <footer id="footer">
-        <h4>This Portfolio is for Educational Purposes Only</h4>
+      <h4>This Portfolio is for Educational Purposes Only</h4>
     </footer>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
