--- a/starwars/index.html
+++ b/starwars/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Welcome to my practice page!</h1>
+    <ol>
+        <li id="item1">Sample Text</li>
+        <li id= "item2">Sample Text</li>
+        <li>Sample Text</li>
+    </ol>
     <script src="starwars.js" type="module"></script>
 </body>
 </html>
