--- a/starwars/index.html
+++ b/starwars/index.html
@@ -9,9 +9,12 @@
 <body>
     <h1>Welcome to my practice page!</h1>
     <ol>
-        <li id="item1">sample text here</li>
-        <li>sample text here</li>
-        <li>sample text here</li>
+        <li id="item1">Sample Text</li>
+        <li>Sample Text</li>
+        <li>Sample Text</li>
     </ol>
+
+    <script src="starwars.js" type="module"></script>
+   
 </body>
 </html>
