--- a/starwars/index.html
+++ b/starwars/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
     <h1>Welcome to my practice page!</h1>
-    <ol>
-        <li id="item1">Sample Text</li>
-        <li>Sample Text</li>
-        <li>Sample Text</li>
+    <ol class='titleList'>
     </ol>
 
     <script src="starwars.js" type="module"></script>
