--- a/characters/index.html
+++ b/characters/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet"/>
-    <title>Star Wars API Practce</title>
+    <link href="styles.css" rel="stylesheet"/>
+    <title>Star Wars Characters</title>
 </head>
 <body>
-    <h1>Welcome to my practice page!</h1>
-    <main class='movieList'>
-    </main>
-
-    <script src="starwars.js" type="module"></script>
-   
+    <h1>Star Wars Characters</h1>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
