--- a/starships/index.html
+++ b/starships/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Star Wars StarshipsS</h1>
+        <h1>Star Wars Starships</h1>
     </header>
     <main>
         <nav>
