--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
     <div id="projectbreak"></div>
     <section id="projects">
       <div class="projects-grid">
-        <a href="#" target="_blank" class="project-tile">
+        <a href="/films/index.html" target="_blank" class="project-tile">
           <figure>
-            <img src="images/portoresize.JPG" />
-            <figcaption>Porto</figcaption>
+            <img src="images/star-wars-films.jpg" />
+            <figcaption>Star Wars Films</figcaption>
           </figure>
         </a>
-        <a href="#" target="_blank" class="project-tile">
+        <a href="/characters/index.html" target="_blank" class="project-tile">
           <figure>
-            <img src="images/castle.JPG" />
-            <figcaption>Castles</figcaption>
+            <img src="images/star-wars-characters.jpg" />
+            <figcaption>Star Wars Characters</figcaption>
           </figure>
         </a>
-        <a href="#" target="_blank" class="project-tile">
+        <a href="/starships/index.html" target="_blank" class="project-tile">
           <figure>
-            <img src="images/houses.jpg" />
-            <figcaption>Tiles</figcaption>
+            <img src="images/star-wars-ships.jpg" />
+            <figcaption>Star Wars StarShips</figcaption>
           </figure>
         </a>
         <a href="#" target="_blank" class="project-tile">
