--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
       <h4>This Portfolio is for Educational Purposes Only</h4>
     </footer>
 
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
   </body>
 </html>
