--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
     </nav>
     <section id="welcome-section">
-      <img src="images/me.jpg" />
+      <img id="me" src="images/me.jpg" />
       <h1>Hello! I am Katie!</h1>
       <p1>Web Developer in Training</p1>
     </section>
