--- a/congress/index.html
+++ b/congress/index.html
@@ -8,12 +8,19 @@
     <title>Congress</title>
 </head>
 <body>
+    <header>
     <h1>The People of Congress</h1>
     <div class="buttonHeader">
+        <button id="seniority">Seniority</button>
+        <button id="birthday">Birthday</button>
         <button id="republicans">Republicans</button>
         <button id="democrats">Democrats</button>
         <button id="independents">Independents</button>
     </div>
+</header>
+<main>
+    <div class="congressGrid"></div>
+</main>
     <script src="congress.js" type="module"></script>
 </body>
 </html>
