--- a/congress/index.html
+++ b/congress/index.html
@@ -11,11 +11,11 @@
     <header>
     <h1>The People of Congress</h1>
     <div class="buttonHeader">
-        <button id="seniority">Seniority</button>
-        <button id="birthday">Birthday</button>
-        <button id="republicans">Republicans</button>
-        <button id="democrats">Democrats</button>
-        <button id="independents">Independents</button>
+        <button class="buttons" id="seniority">Seniority</button>
+        <button class="buttons" id="birthday">Birthday</button>
+        <button class="buttons" id="republicans">Republicans</button>
+        <button class="buttons" id="democrats">Democrats</button>
+        <button class="buttons" id="independents">Independents</button>
     </div>
 </header>
 <main>
