PortfolioPictures added. pokemon and congress

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         </a>
         <a href="#" target="_blank" class="project-tile">
           <figure>
-            <img src="images/stream.jpg" />
-            <figcaption>Garden</figcaption>
+            <img src="images/Pokemon-Lets-Go.jpg" />
+            <figcaption>Pokemon Card Collection</figcaption>
           </figure>
         </a>
         <a href="#" target="_blank" class="project-tile">
           <figure>
-            <img src="images/umbrella.jpg" />
-            <figcaption>Personalized</figcaption>
+            <img src="images/whitehouse.jpg" />
+            <figcaption>Congress</figcaption>
           </figure>
         </a>
       </div>
