--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pokemon</title>
+    <link href="pokestyles.css" rel="stylesheet"/>
+    <title>Pokemon!</title>
 </head>
 <body>
-        <header>
-            <h1>Pokemon!</h1>
-            <button class='loadPokemon'>Load Pokemon</button>
-        </header>
-        <main>
-            <div class="pokeGrid"></div>
-        </main>
-        <script src="pokecode.js" type="module"></script>
-    
+    <header>
+        <h1>Pokemon!  Gotta catch 'em all!</h1>
+        <button class='loadPokemon'>Load Pokemon</button>
+        <button class='fetchPokemonByID'>Fetch Pokemon by ID/Name</button>
+        <button class='newPokemon'>New Pokemon</button>
+    </header>
+    <main>
+        <div class="pokeGrid"></div>
+    </main>
+    <script src="pokecode.js" type="module"></script>
 </body>
 </html>
