link pokemon to main page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <figcaption>Star Wars StarShips</figcaption>
           </figure>
         </a>
-        <a href="#" target="_blank" class="project-tile">
+        <a href="/pokemon/index.html" target="_blank" class="project-tile">
           <figure>
             <img src="images/Pokemon-Lets-Go.jpg" />
             <figcaption>Pokemon Card Collection</figcaption>
