--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Pokemon!  Gotta catch 'em all!</h1>
         <button class='loadPokemon'>Load Pokemon</button>
-        <button class='fetchPokemonByID'>Fetch Pokemon by ID/Name</button>
+        <button class='fetchPokemonById'>Find a Pokemon</button>
         <button class='newPokemon'>New Pokemon</button>
     </header>
     <main>
