--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <h1>Pokemon!  Gotta catch 'em all!</h1>
-        <button class='loadPokemon'>Load Pokemon</button>
-        <button class='fetchPokemonById'>Find a Pokemon</button>
-        <button class='newPokemon'>New Pokemon</button>
+        <button class='loadPokemon buttons'>Load Pokemon</button>
+        <button class='fetchPokemonById buttons'>Find a Pokemon</button>
+        <button class='newPokemon buttons'>New Pokemon</button>
         
     </header>
     <main>
