--- a/pokemon/collection.html
+++ b/pokemon/collection.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <h1>Pokemon!  Gotta catch 'em all!</h1>
-        <button class='loadPokemon buttons'>Load Pokemon</button>
-        <button class='fetchPokemonById buttons'><a href="collection.html">Pokemon Collection</a></button>
+        <button class='loadPokemon buttons'><a href="index.html">Load Pokemon</a></button>
+        <button class='fetchPokemonById buttons'>Find a Pokemon</button>
         <button class='newPokemon buttons'>New Pokemon</button>
         
     </header>
