--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -11,7 +11,8 @@
     <header>
         <h1>Pokemon!  Gotta catch 'em all!</h1>
         <button class='loadPokemon buttons'>Load Pokemon</button>
-        <button class='fetchPokemonById buttons'><a href="collection.html">Pokemon Collection</a></button>
+        <!--<button class='fetchPokemonById buttons'><a href="collection.html">Pokemon Collection</a></button>-->
+        <button class='buttons'><a href="collection.html">Pokemon Collection</a></button>
         <button class='newPokemon buttons'>New Pokemon</button>
         
     </header>
