Trying to get the newbutton to work

--- a/pokemon/collection.html
+++ b/pokemon/collection.html
@@ -16,7 +16,7 @@
         
     </header>
     <main>
-        <div class="pokeGrid"></div>
+        <div class="collection"></div>
     </main>
     <script src="pokecode.js" type="module"></script>
 </body>
