--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -13,7 +13,7 @@
         <button class='loadPokemon buttons'>Load Pokemon</button>
         <!--<button class='fetchPokemonById buttons'><a href="collection.html">Pokemon Collection</a></button>-->
         <button class='buttons'><a href="collection.html">Pokemon Collection</a></button>
-        <button class='newPokemon buttons'>New Pokemon</button>
+        <!--<button class='newPokemon buttons'>New Pokemon</button>-->
         
     </header>
     <main>
