--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Pokemon!  Gotta catch 'em all!</h1>
+        <h1>Pokemon!</h1>
         <button class='loadPokemon buttons'>Load Pokemon</button>
         <button class='fetchPokemonById buttons'>Find a Pokemon</button>
         <button class='newPokemon buttons'>New Pokemon</button>
