--- a/congress/index.html
+++ b/congress/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script
+    src="https://kit.fontawesome.com/9f3880ef33.js"
+    crossorigin="anonymous"
+  ></script>
     <link href="styles.css" rel="stylesheet"/>
-    <title>Congress</title>
+    <title>People of Congress</title>
 </head>
 <body>
     <header>
-    <h1>The People of Congress</h1>
+    <h1>People of Congress</h1>
     <div class="buttonHeader">
-        <button class="buttons" id="seniority">Seniority</button>
-        <button class="buttons" id="birthday">Birthday</button>
-        <button class="buttons" id="republicans">Republicans</button>
-        <button class="buttons" id="democrats">Democrats</button>
-        <button class="buttons" id="independents">Independents</button>
+        <button id="seniorityButton">Sort by Seniority</button>
+        <button id="birthdayButton">Sort by Birthday</button>
+        <button id="republicans">Republicans</button>
+        <button id="democrats">Democrats</button>
+        <button id="independents">Independents</button>
+        <button id="missedVotes">Highest Missed Votes %</button>
     </div>
 </header>
 <main>
