--- a/congress/index.html
+++ b/congress/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-    <h1>People of Congress</h1>
+    <h1>Congress</h1>
     <div class="buttonHeader">
         <button id="seniorityButton">Sort by Seniority</button>
         <button id="birthdayButton">Sort by Birthday</button>
