--- a/congress/index.html
+++ b/congress/index.html
@@ -15,10 +15,10 @@
     <header>
     <h1>Congress</h1>
     <div class="buttonHeader">
-        <button id="seniorityButton">Sort by Seniority</button>
-        <button id="birthdayButton">Sort by Birthday</button>
-        <button id="republicans">Republicans</button>
-        <button id="democrats">Democrats</button>
+        <button class="buttons" id="seniorityButton">Sort by Seniority</button>
+        <button class="buttons" id="birthdayButton">Sort by Birthday</button>
+        <button class="buttons" id="republicans">Republicans</button>
+        <button class="buttons" id="democrats">Democrats</button>
     </div>
 </header>
 <main>
