image links and resizing

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <figcaption>Pokemon Card Collection</figcaption>
           </figure>
         </a>
-        <a href="#" target="_blank" class="project-tile">
+        <a href="/congress/index.html" target="_blank" class="project-tile">
           <figure>
-            <img src="images/whitehouse.jpg" />
+            <img src="images/whitehousebutton.jpg" />
             <figcaption>Congress</figcaption>
           </figure>
         </a>
