--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <a href="#contact">
           <li>Contact</li>
         </a>
+        <a href="http://sandbox.pencilitinmotion.com/">
+        <li>website</li>
+        </a>
       </ul>
     </nav>
     <section id="welcome-section">
