--- a/characters/index.html
+++ b/characters/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <h1>Star Wars Characters</h1>
-    <main id ="main"></main>
+    <!--<button class="buttons">Male Characters</button>
+    <button class="buttons">Female Characters</button>
+    <button class="buttons">Other Characters</button>-->
+    <main id ="main">
+    </main>
     <script src="main.js" type="module"></script>
 </body>
 </html>
