--- a/starships/index.html
+++ b/starships/index.html
@@ -30,3 +30,52 @@
     <script src="main.js" type="module"></script>
 </body>
 </html>
+<!--
+    :root {
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+main {
+    display: flex;
+    height: 120vh;
+}
+
+
+.message-text {
+    text-align: center;
+    font-size: x-large;
+    font-weight: 700;
+    color: black;
+}
+
+nav {
+    width:400px;
+}
+img, nav {
+    z-index: 1;
+    position: relative;
+    display: flex;
+    padding: 20px;
+}
+
+img {
+    padding: 100px;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+li {
+    list-style-type: none;
+}
+
+h1 {
+    font-size: 50px;
+    margin: 20px 20px 10px 50px;
+    color: yellow;
+}
+-->
